build user edit page

--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -147,7 +147,7 @@
                                         <h6 class="bubble-bar__label">5 Students Working</h6>
                                         <ul class="bubble-bar__list">
                                             <li class="hovercard hovercard__trigger hovercard__content--bottom-center hovercard__user-avatar" data-gravatar="//avatars.githubusercontent.com/u/2770126" data-title="jasondecastro" data-toggle="tooltip" data-user-full-name="Jason Decastro" data-user-id="241" data-username="jasondecastro">
-                                                <a class="bubble-bar__link" href="/jasondecastro"><img alt="jasondecastro" class="bubble-bar__link__image" src="//avatars.githubusercontent.com/u/2770126" />
+                                                <a class="bubble-bar__link" href="/users/show"><img alt="jasondecastro" class="bubble-bar__link__image" src="//avatars.githubusercontent.com/u/2770126" />
                                                 </a>
                                             </li>
                                             <li class="hovercard hovercard__trigger hovercard__content--bottom-center hovercard__user-avatar" data-gravatar="//avatars.githubusercontent.com/u/7789629" data-title="CliffRegis" data-toggle="tooltip" data-user-full-name="Clifton Regis" data-user-id="7729" data-username="CliffRegis">
