added ability for admin users to edit lesson

--- a/app/views/lessons/_form.html.erb
+++ b/app/views/lessons/_form.html.erb
@@ -3,5 +3,8 @@
 <%= f.label :name %>
 <%= f.text_field :name %><br>
 
+<%= f.label :content %>
+<%= f.text_field :content %><br>
+
 <%= f.submit %>
 <% end %>
