--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -1,3 +1,9 @@
 <% @lessons.each do |lesson| %>
   <%= link_to lesson.name, lesson_path(lesson) %> <br>
 <% end %>
+<br>
+<br>
+
+<% if current_user.admin %>
+  <%= link_to "Create New Lesson", new_lesson_path %>
+<% end %>
