--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -140,33 +140,11 @@
                         <div class="module__body">
                             <div class="media-block media-block--side-alt media-block--fill">
                                 <div class="media-block__content">
-                                    <div class="heading heading--level-1">Login Required Lab</div>
+                                    <div class="heading heading--level-1">Web Development Immersive Track</div>
                                 </div>
                                 <div class="media-block__media util--pull-right">
                                     <div class="bubble-bar">
-                                        <h6 class="bubble-bar__label">5 Students Working</h6>
-                                        <ul class="bubble-bar__list">
-                                            <li class="hovercard hovercard__trigger hovercard__content--bottom-center hovercard__user-avatar" data-gravatar="//avatars.githubusercontent.com/u/2770126" data-title="jasondecastro" data-toggle="tooltip" data-user-full-name="Jason Decastro" data-user-id="241" data-username="jasondecastro">
-                                                <a class="bubble-bar__link" href="/users/show"><img alt="jasondecastro" class="bubble-bar__link__image" src="//avatars.githubusercontent.com/u/2770126" />
-                                                </a>
-                                            </li>
-                                            <li class="hovercard hovercard__trigger hovercard__content--bottom-center hovercard__user-avatar" data-gravatar="//avatars.githubusercontent.com/u/7789629" data-title="CliffRegis" data-toggle="tooltip" data-user-full-name="Clifton Regis" data-user-id="7729" data-username="CliffRegis">
-                                                <a class="bubble-bar__link" href="/CliffRegis"><img alt="CliffRegis" class="bubble-bar__link__image" src="//avatars.githubusercontent.com/u/7789629" />
-                                                </a>
-                                            </li>
-                                            <li class="hovercard hovercard__trigger hovercard__content--bottom-center hovercard__user-avatar" data-gravatar="//avatars.githubusercontent.com/u/17497667" data-title="KhaledaNYC" data-toggle="tooltip" data-user-full-name="Khaleda Khan" data-user-id="14607" data-username="KhaledaNYC">
-                                                <a class="bubble-bar__link" href="/KhaledaNYC"><img alt="KhaledaNYC" class="bubble-bar__link__image" src="//avatars.githubusercontent.com/u/17497667" />
-                                                </a>
-                                            </li>
-                                            <li class="hovercard hovercard__trigger hovercard__content--bottom-center hovercard__user-avatar" data-gravatar="//avatars.githubusercontent.com/u/10564239" data-title="catquarks" data-toggle="tooltip" data-user-full-name="Tamara Jaton" data-user-id="15302" data-username="catquarks">
-                                                <a class="bubble-bar__link" href="/catquarks"><img alt="catquarks" class="bubble-bar__link__image" src="//avatars.githubusercontent.com/u/10564239" />
-                                                </a>
-                                            </li>
-                                            <li class="hovercard hovercard__trigger hovercard__content--bottom-center hovercard__user-avatar" data-gravatar="//avatars.githubusercontent.com/u/19698267" data-title="hoslersk" data-toggle="tooltip" data-user-full-name="Schyler Hosler" data-user-id="16127" data-username="hoslersk">
-                                                <a class="bubble-bar__link" href="/hoslersk"><img alt="hoslersk" class="bubble-bar__link__image" src="//avatars.githubusercontent.com/u/19698267" />
-                                                </a>
-                                            </li>
-                                        </ul>
+                                        <h2 class="bubble-bar__label"><%= link_to "User Profile Page Link"%></h2>
                                     </div>
                                 </div>
                             </div>
