--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -2,6 +2,7 @@
   <%= link_to lesson.name, lesson_path(lesson) %> <br>
 <% end %>
 <br>
+    <%= link_to "Track Page", "tracks/1" %>
 <br>
 
 <% if current_user.admin %>
