--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -144,7 +144,7 @@
                                 </div>
                                 <div class="media-block__media util--pull-right">
                                     <div class="bubble-bar">
-                                        <h2 class="bubble-bar__label"><%= link_to "User Profile Page Link"%></h2>
+                                        <h2 class="bubble-bar__label"><%= link_to "User Profile Page Link", user_path(current_user)%></h2>
                                     </div>
                                 </div>
                             </div>
