--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -133,7 +133,7 @@
                                     <div class="heading heading--level-6 heading--color-yellow">Keep Learning</div>
                                     <div class="heading heading--level-2">Your Next Lesson</div>
                                 </div>
-                                <div class="media-block__media"><a class="button button--color-yellow button--fixed-width-large util--text-align-c" href="/lessons/1">Continue</a>
+                                <div class="media-block__media"><a class="button button--color-yellow button--fixed-width-large util--text-align-c" href="/lessons/">Lessons</a>
                                 </div>
                             </div>
                         </div>
