--- a/app/views/lessons/_form.html.erb
+++ b/app/views/lessons/_form.html.erb
@@ -1,10 +1,161 @@
+<!DOCTYPE html>
+<html>
 
-<%= form_for @lesson do |f| %>
-<%= f.label :name %>
-<%= f.text_field :name %><br>
+<head>
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <title>Learn - Web Development Immersive Spring 2016</title>
+    <meta content="Learn - A platform for education." property="og:title" />
+    <meta content="Learn - A platform for education." property="og:site_name" />
+    <meta content="Learn is an outcomes-driven online learning platform and is used to power the Learn-Verified Full Stack Web Development program." property="og:description" />
+    <meta content="https://flatironschool-static.s3.amazonaws.com/learn-social.png" property="og:image" />
+    <meta content="https://learn.co/" property="og:url" />
+    <meta content="1200" property="og:image:width" />
+    <meta content="630" property="og:image:height" />
+    <meta content="summary_large_image" name="twitter:card" />
+    <meta content="Learn - A platform for education." name="twitter:title" />
+    <meta content="@FlatironSchool" name="twitter:site" />
+    <meta content="@FlatironSchool" name="twitter:creator" />
+    <meta content="Learn is an outcomes-driven online learning platform and is used to power the Learn-Verified Full Stack Web Development program." name="twitter:description" />
+    <meta content="https://flatironschool-static.s3.amazonaws.com/learn-social.png" name="twitter:image" />
+    <meta content="Learn is an outcomes-driven online learning platform and is used to power the Learn-Verified Full Stack Web Development program." name="description" />
+    <link href="http://flatironschool-static.s3.amazonaws.com/learn-social.png" rel="image_src" />
+    <link href="//flatironschool-static.s3.amazonaws.com/favicons/apple-touch-icon-57x57.png" rel="apple-touch-icon" sizes="57x57" />
+    <link href="//flatironschool-static.s3.amazonaws.com/favicons/apple-touch-icon-60x60.png" rel="apple-touch-icon" sizes="60x60" />
+    <link href="//flatironschool-static.s3.amazonaws.com/favicons/apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72" />
+    <link href="//flatironschool-static.s3.amazonaws.com/favicons/apple-touch-icon-76x76.png" rel="apple-touch-icon" sizes="76x76" />
+    <link href="//flatironschool-static.s3.amazonaws.com/favicons/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114" />
+    <link href="//flatironschool-static.s3.amazonaws.com/favicons/apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120" />
+    <link href="//flatironschool-static.s3.amazonaws.com/favicons/apple-touch-icon-144x144.png" rel="apple-touch-icon" sizes="144x144" />
+    <link href="//flatironschool-static.s3.amazonaws.com/favicons/apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152" />
+    <link href="//flatironschool-static.s3.amazonaws.com/favicons/apple-touch-icon-180x180.png" rel="apple-touch-icon" sizes="180x180" />
+    <link href="//flatironschool-static.s3.amazonaws.com/favicons/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png" />
+    <link href="//flatironschool-static.s3.amazonaws.com/favicons/favicon-194x194.png" rel="icon" sizes="194x194" type="image/png" />
+    <link href="//flatironschool-static.s3.amazonaws.com/favicons/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png" />
+    <link href="//flatironschool-static.s3.amazonaws.com/favicons/android-chrome-192x192.png" rel="icon" sizes="192x192" type="image/png" />
+    <link href="//flatironschool-static.s3.amazonaws.com/favicons/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png" />
+    <link href="//flatironschool-static.s3.amazonaws.com/favicons/manifest.json" rel="manifest" />
+    <link href="//flatironschool-static.s3.amazonaws.com/favicons/favicon.ico" rel="shortcut icon" />
+    <meta content="Learn" name="apple-mobile-web-app-title" />
+    <meta content="Learn" name="application-name" />
+    <meta content="#4bc6e2" name="msapplication-TileColor" />
+    <meta content="//flatironschool-static.s3.amazonaws.com/favicons/mstile-144x144.png" name="msapplication-TileImage" />
+    <meta content="//flatironschool-static.s3.amazonaws.com/favicons/browserconfig.xml" name="msapplication-config" />
+    <meta content="#4bc6e2" name="theme-color" />
+    <meta name="csrf-param" content="authenticity_token" />
+    <meta name="csrf-token" content="cShZxohKmR/3thQ5AstH4qmWsGdbTf38dFTEVuuIjdQkJzdci5KSes2Oud5OSC817trL4WsmIndBXTYMmfLG2Q==" />
+    <link rel="stylesheet" media="all" href="https://d3fcwsrz3tejug.cloudfront.net/assets/application-352617d957db42a9bf6aad1c9068b276.css" />
+    <script src="https://d3fcwsrz3tejug.cloudfront.net/assets/bin/vendor-044125e7fb95372f74a58101b968ed93.js" media="all"></script>
+    <script src="https://d3fcwsrz3tejug.cloudfront.net/assets/bin/learn_v2-46cbbbf9e87931dc1a07dddffaa217e0.js" media="all"></script>
+    <script src="https://d3fcwsrz3tejug.cloudfront.net/assets/lib/sails.io-b676c5afa6811a77201334e8f0328fbe.js" media="all"></script>
+    <script>
+        io.sails.url = "https://flatchat.flatironschool.com";
+        io.sails.headers = {
+            'x-flatchat-token': "303e1092f39631dd9dd46a7439fbd55ad4a8da3776d3d7545e396f5244d664fb"
+        }
+        io.sails.transports = ['websocket']
+    </script>
+    <script src="https://d3fcwsrz3tejug.cloudfront.net/assets/bin/flatchat-student-dbb65d7e6ce1bd0bc7a3f7b7e33f2bb6.js" media="all" async="async"></script>
+    <script>
+        window.SEGMENT_TOKEN = "cIyUigdyqDgZ0i7sJRJnWZs4ba77NkyS";
+    </script>
+    <script src="https://d3fcwsrz3tejug.cloudfront.net/assets/bin/analytics-d2f7f92a6130e8386797261ce92940ef.js" media="all"></script>
+    <script>
+        window.tracking.uuid = "833af22c-1c0d-427f-ab18-4b77114e5202";
+        window.tracking.init("833af22c-1c0d-427f-ab18-4b77114e5202");
 
-<%= f.label :content %>
-<%= f.text_field :content %><br>
+        document.addEventListener('DOMContentLoaded', function() {
 
-<%= f.submit %>
-<% end %>
+        });
+
+
+
+        analytics.ready(function() {
+            if (window.tracking.cookie.github_fix) {
+                window.tracking.log('GitHub Fix');
+                ga('set', 'referrer', 'http://learn.co/GitHubOAuthReturn');
+                ga('create', 'UA-33578770-20', 'auto', {
+                    'name': 'flatironSchoolTracker'
+                });
+                ga('flatironSchoolTracker.send', 'pageview');
+            }
+        });
+    </script>
+    <!-- Start of Async HubSpot Analytics Code -->
+
+    <!-- End of Async HubSpot Analytics Code -->
+</head>
+
+<body class="body--has-sidebar body--background-grey body--has-sidebar">
+
+    <section class="site-nav-wrapper" id="js--region-nav"></section>
+    <div id="js--region-subheader"></div>
+    <div id="js--region-banner"></div>
+    <div id="js--region-flash"></div>
+    <section class="site-main" id="js--region-main">
+        <div class="site-main__inner">
+            <div id="js--region-body"></div>
+            <div class="level">
+                <div class="level__inner">
+                    <div class="module module--island module--island--cap">
+                        <div class="module__head">
+                            <div class="media-block media-block--side-alt">
+                                <div class="media-block__content media-block__content--fill">
+                                    <div class="heading heading--level-6 heading--color-yellow">Keep Learning</div>
+                                    <div class="heading heading--level-2">Your Current Lesson</div>
+                                </div>
+                                <div class="media-block__media"><a class="button button--color-yellow button--fixed-width-large util--text-align-c" href="/lessons/">Lessons</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="module__body">
+                            <div class="media-block media-block--side-alt media-block--fill">
+                                <div class="media-block__content">
+                                    <div class="heading heading--level-1"><%= @lesson.name%> </div>
+                                </div>
+                                <div class="media-block__media util--pull-right">
+                                    <div class="bubble-bar">
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="level">
+                <div class="level__inner">
+                    <div class="col col--m-size-1of3">
+                        <div class="module module--island module--padding-tight module--head-nowrap">
+                            <div class="module__head util--text-align-c">
+                                <h5 class="heading heading--level-3 heading--color-grey-light">Edit Lesson</h5>
+                            </div>
+                            <div class="module__body">
+
+
+                                                <%= form_for @lesson do |f| %>
+                                                  <%= f.label :name %><br>
+                                                  <%= f.text_field :name %><br>
+                                                  <br>
+
+                                                  <%= f.label :content %><br>
+                                                  <%= f.text_field :content, class: "form-control" %><br>
+                                                  <br><br>
+
+                                                  <%= f.submit "Update", class: "button button--color-yellow button--fixed-width-small util--text-align-c" %>
+                                                  <% end %>
+                                                
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+    <div id="js--region-modal"></div>
+</body>
+
+</html>
+
+
