--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -48,76 +48,16 @@
     <script src="https://d3fcwsrz3tejug.cloudfront.net/assets/bin/vendor-044125e7fb95372f74a58101b968ed93.js" media="all"></script>
     <script src="https://d3fcwsrz3tejug.cloudfront.net/assets/bin/learn_v2-46cbbbf9e87931dc1a07dddffaa217e0.js" media="all"></script>
     <script src="https://d3fcwsrz3tejug.cloudfront.net/assets/lib/sails.io-b676c5afa6811a77201334e8f0328fbe.js" media="all"></script>
-    <script>
-        io.sails.url = "https://flatchat.flatironschool.com";
-        io.sails.headers = {
-            'x-flatchat-token': "303e1092f39631dd9dd46a7439fbd55ad4a8da3776d3d7545e396f5244d664fb"
-        }
-        io.sails.transports = ['websocket']
-    </script>
-    <script src="https://d3fcwsrz3tejug.cloudfront.net/assets/bin/flatchat-student-dbb65d7e6ce1bd0bc7a3f7b7e33f2bb6.js" media="all" async="async"></script>
-    <script>
-        window.SEGMENT_TOKEN = "cIyUigdyqDgZ0i7sJRJnWZs4ba77NkyS";
-    </script>
-    <script src="https://d3fcwsrz3tejug.cloudfront.net/assets/bin/analytics-d2f7f92a6130e8386797261ce92940ef.js" media="all"></script>
-    <script>
-        window.tracking.uuid = "833af22c-1c0d-427f-ab18-4b77114e5202";
-        window.tracking.init("833af22c-1c0d-427f-ab18-4b77114e5202");
-
-        document.addEventListener('DOMContentLoaded', function() {
-
-        });
-
-
-
-        analytics.ready(function() {
-            if (window.tracking.cookie.github_fix) {
-                window.tracking.log('GitHub Fix');
-                ga('set', 'referrer', 'http://learn.co/GitHubOAuthReturn');
-                ga('create', 'UA-33578770-20', 'auto', {
-                    'name': 'flatironSchoolTracker'
-                });
-                ga('flatironSchoolTracker.send', 'pageview');
-            }
-        });
+ 
     </script>
     <!-- Start of Async HubSpot Analytics Code -->
 
     <!-- End of Async HubSpot Analytics Code -->
 </head>
 
-<body class="body--has-sidebar body--background-grey body--has-sidebar">
-    <header class="site-header">
-        <div class="site-panel-accessory" id="js--region-panel-accessory"></div>
-        <div class="site-header__home js--menu-click-listener">
-            <div id="js--region-switcher"></div>
-            <div id="js--region-logo"></div>
-        </div>
-        <div class="site-header__menu js--menu-click-listener" id="js--region-menu"></div>
-        <div id="js--region-search"></div>
-        <div class="site-header__user">
-            <div class="media-block media-block--side-alt media-block--vertical-align-top media-block--spacing-tight">
-                <div class="media-block__content util--text-align-r">
-                    <h5 class="heading heading--level-6">Karma</h5>
-                    <h3 class="heading heading--level-4 heading--color-green" id="js--karma-points-count">1 point</h3>
-                </div>
-                <div class="media-block__media js--menu-click-listener">
-                    <div class="image-frame image-frame--border-radius-full site-header__user__thumbnail-frame"><img class="image-frame__image site-header__user__thumbnail" src="//avatars.githubusercontent.com/u/2770126" />
-                    </div>
-                    <div id="js--region-user-menu"></div>
-                </div>
-                <div class="media-block__media heading--color-grey-light" title="Help Center">
-                    <a class="link--color-inherit" href="/help-center">
-                        <svg class="inline-svg--fixed-size-large">
-                            <use xlink:href="https://learn.co/assets/sprite-97e4d9e03d420ae0841ed3a39f7baec0.svg#svg__icon--info"></use>
-                        </svg>
-                    </a>
-                </div>
-                <div class="media-block__media heading--color-grey-light util--relative" id="js--direct-messages-toggle"></div>
-            </div>
-        </div>
-    </header>
-    <section class="site-nav-wrapper" id="js--region-nav"></section>
+<body style="margin-left:200px;" class="body--has-sidebar body--background-grey body--has-sidebar">
+
+    <section class="site-nav-wrapper" id="js--region-nav" ></section>
     <div id="js--region-subheader"></div>
     <div id="js--region-banner"></div>
     <div id="js--region-flash"></div>
@@ -146,13 +86,6 @@
   <%= link_to lesson.name, lesson_path(lesson) %> <br>
 <% end %>
 <br>
-<<<<<<< HEAD
-=======
-<%= link_to "Next Lesson" %>
-<br>
-    <%= link_to "Track Page", "tracks/1" %>
-<br>
->>>>>>> c4cac9c09a51b47564ce5e7245afadba1e12d975
 
 
 <% if current_user.admin %>
