--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -102,7 +102,7 @@
                     <h3 class="heading heading--level-4 heading--color-green" id="js--karma-points-count">1 point</h3>
                 </div>
                 <div class="media-block__media js--menu-click-listener">
-                    <div class="image-frame image-frame--border-radius-full site-header__user__thumbnail-frame"><img class="image-frame__image site-header__user__thumbnail" src="//avatars.githubusercontent.com/u/2770126" />
+                    <div class="image-frame image-frame--border-radius-full site-header__user__thumbnail-frame"><img class="image-frame__image site-header__user__thumbnail" src="" />
                     </div>
                     <div id="js--region-user-menu"></div>
                 </div>
