--- a/app/views/lessons/_form.html.erb
+++ b/app/views/lessons/_form.html.erb
@@ -104,7 +104,9 @@
                                     <div class="heading heading--level-6 heading--color-yellow">Keep Learning</div>
                                     <div class="heading heading--level-2">Your Current Lesson</div>
                                 </div>
-                                <div class="media-block__media"><a class="button button--color-yellow button--fixed-width-large util--text-align-c" href="/lessons/">Lessons</a>
+                                <div class="media-block__media"><a class="button button--color-yellow button--fixed-width-small util--text-align-c" href="/lessons/">Previous</a>
+                                </div>
+                                <div class="media-block__media"><a class="button button--color-yellow button--fixed-width-small util--text-align-c" href="/lessons/">Next</a>
                                 </div>
                             </div>
                         </div>
@@ -129,7 +131,8 @@
                     <div class="col col--m-size-1of3">
                         <div class="module module--island module--padding-tight module--head-nowrap">
                             <div class="module__head util--text-align-c">
-                                <h5 class="heading heading--level-3 heading--color-grey-light">Edit Lesson</h5>
+                                <h5 class="heading heading--level-3 heading--color-grey-light">Edit Lesson
+                                </h5>
                             </div>
                             <div class="module__body">
 
