--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -104,8 +104,13 @@
                                     <div class="heading heading--level-6 heading--color-yellow">Keep Learning</div>
                                     <div class="heading heading--level-2">Your Current Lesson</div>
                                 </div>
-                                <div class="media-block__media"><a class="button button--color-yellow button--fixed-width-large util--text-align-c" href="/lessons/">Lessons</a>
-                                </div>
+                              
+                                <% if Lesson.exists?(id: (params[:id].to_i-1)) %>
+  <div class="media-block__media"><%= link_to "Previous Lesson", "#{(params[:id].to_i-1).to_s}", class: "button button--color-yellow button--fixed-width-small util--text-align-c"%></div>
+<%end %>
+<% if Lesson.exists?(id: (params[:id].to_i+1)) %>
+  <div class="media-block__media"><%= link_to "Next Lesson", "#{(params[:id].to_i+1).to_s}", class: "button button--color-yellow button--fixed-width-small util--text-align-c"%></div>
+<%end %>
                             </div>
                         </div>
                         <div class="module__body">
@@ -140,12 +145,7 @@
                                                 <h6 class="heading heading--level-2">Lesson Name: <%= "#{@lesson.name}" %></h6>
                                                 <h6 class="heading heading--level-2">Lesson Content: <%= "#{@lesson.content}" %></h6>
 
-                                                <% if Lesson.exists?(id: (params[:id].to_i-1)) %>
-  <%= link_to "Previous Lesson", "#{(params[:id].to_i-1).to_s}"%>
-<%end %>
-<% if Lesson.exists?(id: (params[:id].to_i+1)) %>
-  <%= link_to "Next Lesson", "#{(params[:id].to_i+1).to_s}"%>
-<%end %>
+                                              
                                                 
                                             </div>
                                         </a>
