--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -9,4 +9,8 @@
   "button button--color-blue button--layout-block util--margin-tl util--margin-bl"
   name="commit" type="submit" value=
   "Continue">
+  <br><br>
+
+  <%= link_to "Delete Your Account", user_path(@user), method: "delete" %>
+
 <% end %>
