--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -6,7 +6,7 @@
     <div class="module__body">
             <h3 class=
             "heading heading--level-1 heading--color-blue heading--font-size-largest heading--weight-lightest util--padding-txl util--padding-bl">
-            Sign up for Learn</h3>
+            Sign up for LearnClone</h3>
             <%= f.text_field :first_name, {placeholder: "Enter your first name", class: "input util--padding-lxl util--margin-bl input--border-none"} %>
             <%= f.text_field :last_name, {placeholder: "Enter your last name", class: "input util--padding-lxl util--margin-bl input--border-none"} %>
             <%= f.text_field :email, {placeholder: "Enter your email", class: "input util--padding-lxl util--margin-bl input--border-none"} %>
