--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Learn - Sign In</title>
+    <title>LearnClone - Sign In</title>
     <meta content="Learn - A platform for education." property="og:title">
     <meta content="Learn - A platform for education." property="og:site_name">
     <meta content=
