add delete lesson link

--- a/app/views/lessons/admin_show.html.erb
+++ b/app/views/lessons/admin_show.html.erb
@@ -6,5 +6,5 @@
 <br><br>
 <%= link_to "Lesson Index", lessons_path %><br>
 <%= link_to "Edit Lesson", edit_lesson_path(@lesson)%><br>
-<%= link_to "Delete Lesson" %><br>
+<%= link_to "Delete Lesson", lesson_path, method: "delete" %>
 <%= link_to "Create New Lesson", new_lesson_path %><br>
