--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -185,7 +185,7 @@
                                 <div class="module__body">
                                     <h3 class=
                                     "heading heading--level-1 heading--weight-lighter heading--color-grey util--padding-tl util--padding-bm heading--font-size-larger">
-                                    New to Learn?</h3>
+                                    New to LearnClone?</h3>
                                     <div class="image-frame"><img class=
                                     "image-frame__image" src=
                                     "https://learn.co/assets/login/learn-screenshot.jpg"></div>
